--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <select class="search-select">
                         <option>All</option>
                     </select>
-                    <input placeholder="Search Amazon" class="search-input">
+                    <input placeholder="Search for Ganga" class="search-input">
                     <div class="search-icon">
                         <i class="fa-solid fa-magnifying-glass"></i>
                     </div>
